# grc-tools

./: .gitignore
apps/evidence-app/: README.md
apps/evidence-app/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  openapi.yaml  requirements-test.txt  requirements.txt
apps/evidence-app/runner/: .env.example  .gitignore  README.md  install.sh  pyproject.toml
apps/evidence-app/runner/tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_loop.py  test_oauth.py  test_oauth_cache.py
apps/evidence-app/runner/wso2_runner/: agent.py  cli.py  client.py  config.py  loop.py  oauth.py
apps/evidence-app/webapp/: .dockerignore  .env.example  Dockerfile  README.md  index.html  index.js  package-lock.json  package.json  vite.config.ts
apps/grc-platform/backend/: .env.example  .gitignore  README.md  go.mod
apps/grc-platform/webapp/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
entity/compliance-entity/: .env.example  .gitignore  README.md  go.mod  openapi.yaml  test.sh
entity/compliance-entity/.choreo/: component.yaml
webapp/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
webapp/src/: App.tsx  AppWithConfig.tsx  main.tsx
webapp/src/config/: apiConfig.ts  authConfig.ts  loggerConfig.ts  portalConfig.ts  themeConfig.ts
webapp/src/constants/: authConstants.ts  common.ts
webapp/src/hooks/: logger.ts  useAuthApiClient.ts  useLogger.ts  useResponsiveLayout.ts
webapp/src/layouts/: AppLayout.tsx  AppShellLayout.tsx  (+2 more)
(+503 files in other folders)
