[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wso2-compliance-runner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.12,<1",
    "playwright>=1.49",
    "httpx>=0.28",
    "pydantic-settings>=2.4",
    "typer>=0.12",
    "langchain-google-genai>=2.0",
    "pillow>=10",
    "mss>=9.0",
]

[project.scripts]
wso2-runner = "wso2_runner.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["wso2_runner*"]
